fix: correct overflow settings

--- a/public/style.css
+++ b/public/style.css
@@ -129,7 +129,6 @@
   .table-panel {
     position: absolute;
     display: flex;
-    align-items: center;
     justify-content: flex-start;
     flex-direction: column;
     padding: 0 20px;
@@ -138,7 +137,7 @@
     height: 100%;
     width: 50%;
     right: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   
   .social-container {
@@ -157,5 +156,9 @@
   }
 
   td {
-      text-align: left;
+    font-weight: bold;
+    text-align: left;
+    padding: 5px 0;
+    border-collapse: collapse;
+    overflow-x: visible;
   }
